[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[package.metadata.bootloader]
map-physical-memory = true

[dependencies]
# This is the correct dependency. It provides the build tools and the API.
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.7"
spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
x86_64 = "0.15.1"
linked_list_allocator = "0.10.5"
